<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Assignment2</string>
    <string name="validation_empty_name">Your name(s) cannot be empty</string>
    <string name="validation_invalid_name">Your name(s) must contain only letters</string>
    <string name="connect_3">Connect 3</string>
    <string name="enter_name_input">Enter Name</string>
    <string name="enter_name_2_input">Enter Name 2</string>
    <string name="start_game">Start Game</string>
    <string name="grid_info">Tic-tac-toe grid (3X3)</string>
    <string name="token00">top left token</string>
    <string name="token01">top center token</string>
    <string name="token02">top right token</string>
    <string name="token10">center left token</string>
    <string name="token11" tools:ignore="Typos">center center token</string>
    <string name="token12">center right token</string>
    <string name="token20">bottom left token</string>
    <string name="token21">bottom center token</string>
    <string name="token22">bottom right token</string>
    <string name="play_again">Play Again</string>
    <string name="quit">Quit</string>
    <string name="it_s_a_tie">It\'s a Tie!</string>
</resources>