<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/textGameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="35dp"
        android:text="@string/connect_3"
        android:textColor="@android:color/holo_purple"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/grid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/grid"
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/grid_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGameTitle"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:id="@+id/textWinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="22dp"
        android:text="@string/app_name"
        android:textColor="@color/purple_700"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textGameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="60dp"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="@id/grid"
        app:layout_constraintEnd_toEndOf="@id/grid"
        app:layout_constraintStart_toStartOf="@id/grid"
        app:layout_constraintTop_toTopOf="@id/grid"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView00"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token00"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token01"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView02"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token02"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token10"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token11"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token12"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token20"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token21"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/token22"
            android:elevation="0dp"
            android:onClick="onGridSpaceClick"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />


    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnQuit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/quit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnReset"
        app:layout_constraintTop_toBottomOf="@id/grid"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>